--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <div class="glitch-wrapper">
       <div class="glitch-text">
-        ERROR<br>TEAM
+        ERROR TEAM
       </div>
     </div>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
