--- a/belajar.html
+++ b/belajar.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
+	<!-- INI BAGIAN HEADNYA PAK -->
 	<head>
 		<title>HelloWorld || Belajar HTML</title>
 	</head>
 
+	<!-- INI BAGIAN BODYNYA PAK -->
 	<body>
-	<h1>Selamat Datang Gans!</h1>
+		<div>
+			<a href="index.html">Liff</a>
+			<a href="index.php">Liff2</a>
+		</div>
 	</body>
 		
 </html>
