--- a/belajar.html
+++ b/belajar.html
@@ -3,6 +3,7 @@
 	<!-- INI BAGIAN HEADNYA PAK -->
 	<head>
 		<title>HelloWorld || Belajar HTML</title>
+		<meta charset="utf-8">
 	</head>
 
 	<!-- INI BAGIAN BODYNYA PAK -->
