--- a/belajar.html
+++ b/belajar.html
@@ -3,7 +3,7 @@
 	<!-- INI BAGIAN HEADNYA PAK -->
 	<head>
 		<title>HelloWorld || Belajar HTML</title>
-		<meta charset="utf-8">
+		<meta charset="UTF-8">
 	</head>
 
 	<!-- INI BAGIAN BODYNYA PAK -->
@@ -12,6 +12,14 @@
 			<a href="index.html">Liff</a>
 			<a href="index.php">Liff2</a>
 		</div>
+
+		<div>
+			<table border="1">
+				<td>
+					<tr>OkeesIAPPA</tr>
+				</td>
+			</table>
+		<div>
 	</body>
 		
 </html>
