--- a/belajar.html
+++ b/belajar.html
@@ -15,11 +15,16 @@
 
 		<div>
 			<table border="1">
-				<td>
-					<tr>OkeesIAPPA</tr>
-				</td>
+				<tr>
+					<td>NAMA</td>
+					<td>UMUR</td>
+				</tr>
+				<tr>
+					<td>Risyad Ramadhan</td>
+					<td>15</td>
+				</tr>
 			</table>
-		<div>
+		</div>
 	</body>
 		
 </html>
