--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LIFF APP | ERROR TEAM</title>
+    <title>LIFF APP | TCB</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="glitch-wrapper">
       <div class="glitch-text">
-        ERROR TEAM
+        TEAM CRACKBOT
       </div>
     </div>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
