--- a/index.html
+++ b/index.html
@@ -1,14 +1,193 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LIFF APP | TCB</title>
+    <title>TCB - LIFF</title>
     <link rel="stylesheet" href="style.css">
+    <style type="text/css">
+    body {
+	background-image: url(https://imagaes.pexels.com/photos/pexels-photo-164005.jpeg);
+}
+img[alt="www.000webhost.com"] { display: none;}
+    </style>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
+
 <body>
-    <div class="glitch-wrapper">
-      <div class="glitch-text">
-        TEAM CRACKBOT
-      </div>
-    </div>
+    <center>
+        <div class="flex">
+          <a href="line://ti/p/~yana_shb" class="bttn">TEAM CRACKBOT</a>
+        </div></center>
+    <center>
+        <h2><button class="button button1" id="textx">Text</button></h2>
+        <h2><button class="button button2" id="imagex">Image</button></h2>
+        <h2><button class="button button3" id="videox">Video</button></h2>
+        <h2><button class="button button4" id="audiox">Audio</button></h2>
+        <h2><button class="button button5" id="stickerx">Big Sticker</button></h2></center>
+    <center>
+      <head>
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <title>Template Sender</title>
+      	<style>
+      table, th, td {
+          border: 1px solid black;
+      }
+      </style>
+      </head>
+
+      <body>
+      	<select onChange="yesnoCheck(this);">
+      	<option value='other'>SELECT TYPE TEMPLATE</option>
+      	<option value='button'>BUTTON</option>
+      	<option value='footer'>FOOTER</option>
+      	<option value='image_carousel'>IMAGE CAROUSEL</option>
+      	</select>
+
+
+        <div id='button'>
+      	<br>
+      	<table style="width:80%">
+      	<tr><td><label style="color: #FFF">altText</label></td><td><input id='button_altText' value='Button Template'></td></tr>
+      	<tr><td><label style="color: #FFF">thumbnailImageUrl</label></td><td><input id='button_thumbnailImageUrl' value='https://i.ebayimg.com/images/g/5Q8AAOSwPCVX9Moo/s-l300.jpg'></td></tr>
+      	<tr><td><label style="color: #FFF">title</label></td><td><input id='button_title' value='JUDUL'></td></tr>
+      	<tr><td><label style="color: #FFF">text</label></td><td><input id='button_text' value='Deskripsi'></td></tr>
+      	<tr><td><label style="color: #FFF">label</label></td><td><input id='button_label' value='An Button Template'></td></tr>
+      	<tr><td><label style="color: #FFF">url</label></td><td><input id='button_url' value='line://ti/p/~yana_shb'></td></tr>
+      	<tr><td><label style="color: #FFF">Linklabel</label></td><td><input id='button_Linklabel' value='Add Me'></td></tr>
+      	<tr><td><label style="color: #FFF">LinkUrl</label></td><td><input id='button_LinkUrl' value='line://ti/p/~yana_shb'></td></tr>
+      	</table>
+      	<button id='button_send'>SEND</button>
+      	</div>
+
+
+      	<div id='footer'>
+      	<br>
+      	<table style="width:80%">
+      	<tr><td><label style="color: #FFF">altText</label></td><td><input id='footer_text' value='halo'></td></tr>
+      	<tr>
+      	  <td><label style="color: #FFF">thumbnailImageUrl</label></td><td><input id='footer_label' value='ini  Footer'></td></tr>
+      	<tr><td><label style="color: #FFF">title</label></td><td><input id='footer_icon' value='https://i.ebayimg.com/images/g/5Q8AAOSwPCVX9Moo/s-l300.jpg'></td></tr>
+      	<tr><td><label style="color: #FFF">title</label></td><td><input id='footer_url' value='line://ti/p/~yana_shb'></td></tr>
+      	</table>
+      	<button id='footer_send'>SEND</button>
+      	</div>
+
+      	<div id='image_carousel'>
+      	<br>
+      	<table style="width:80%">
+      	<tr><td><label style="color: #FFF">altText</label></td><td><input id='image_carousel_altText' value='Image Carousel Template'></td></tr>
+      	<tr><td><label style="color: #FFF">imageUrl1</label></td><td><input id='image_carousel_imageUrl1' value='https://i.ebayimg.com/images/g/5Q8AAOSwPCVX9Moo/s-l300.jpg'></td></tr>
+      	<tr><td><label style="color: #FFF">label1</label></td><td><input id='image_carousel_label1' value='Image 1'></td></tr>
+      	<tr><td><label style="color: #FFF">url1</label></td><td><input id='image_carousel_url1' value='line://ti/p/~zero_hacker'></td></tr>
+      	<tr><td><label style="color: #FFF">imageUrl2</label></td><td><input id='image_carousel_imageUrl2' value='https://i.ebayimg.com/images/g/5Q8AAOSwPCVX9Moo/s-l300.jpg'></td></tr>
+      	<tr><td><label style="color: #FFF">label2</label></td><td><input id='image_carousel_label2' value='Image 2'></td></tr>
+      	<tr><td><label style="color: #FFF">url2</label></td><td><input id='image_carousel_url2' value='line://ti/p/~zero_hacker'></td></tr>
+      	<tr><td><label style="color: #FFF">imageUrl3</label></td><td><input id='image_carousel_imageUrl3' value='https://i.ebayimg.com/images/g/5Q8AAOSwPCVX9Moo/s-l300.jpg'></td></tr>
+      	<tr><td><label style="color: #FFF">label3</label></td><td><input id='image_carousel_label3' value='Image 3'></td></tr>
+      	<tr><td><label style="color: #FFF">url3</label></td><td><input id='image_carousel_url3' value='line://ti/p/~zero_hacker'></td></tr>
+      	</table>
+      	<button id='image_carousel_send'>SEND</button>
+      	</div>
+
+          <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
+          <script>
+      	liff.init();
+      	document.getElementById("button").style.display = "none";
+      	document.getElementById("footer").style.display = "none";
+      	document.getElementById("image_carousel").style.display = "none";
+          function yesnoCheck(that) {
+              if (that.value == "button") {
+                  document.getElementById("button").style.display = "block";
+      			document.getElementById("footer").style.display = "none";
+      			document.getElementById("image_carousel").style.display = "none";
+              } else if (that.value == "footer") {
+                  document.getElementById("button").style.display = "none";
+      			document.getElementById("footer").style.display = "block";
+      			document.getElementById("image_carousel").style.display = "none";
+              } else if (that.value == "image_carousel") {
+                  document.getElementById("button").style.display = "none";
+      			document.getElementById("footer").style.display = "none";
+      			document.getElementById("image_carousel").style.display = "block";
+      	} else {
+      			document.getElementById("button").style.display = "none";
+      			document.getElementById("footer").style.display = "none";
+      			document.getElementById("image_carousel").style.display = "none";
+      		}
+          	}
+      	</script>
+          <script>
+      	document.getElementById('button_send').addEventListener('click', function () {
+              liff.sendMessages([{
+      			type: "template",
+      			altText: document.getElementById('button_altText').value,
+      			template: {
+      				type: "buttons",
+      				thumbnailImageUrl: document.getElementById('button_thumbnailImageUrl').value,
+      				imageAspectRatio: "rectangle",
+      				imageSize: "cover",
+      				imageBackgroundColor: "#FFFFFF",
+      				title: document.getElementById('button_title').value,
+      				text: document.getElementById('button_text').value,
+      				defaultAction: {
+      					type: "uri",
+      					label: document.getElementById('button_label').value,
+      					uri: document.getElementById('button_url').value
+      					},
+      					actions: [{
+      						type: "uri",
+      						label: document.getElementById('button_Linklabel').value,
+      						uri: document.getElementById('button_LinkUrl').value
+      					}]
+      			}
+      		}]).then(function () {
+                  liff.closeWindow();
+      		});
+      	});
+      	document.getElementById('footer_send').addEventListener('click', function () {
+              liff.sendMessages([{
+      			type: "text",
+      			text: document.getElementById('footer_text').value,
+      			sentBy: {
+      				label: document.getElementById('footer_label').value,
+      				iconUrl: document.getElementById('footer_icon').value,
+      				linkUrl: document.getElementById('footer_url').value
+      				}
+      		}]).then(function () {
+                  liff.closeWindow();
+      		});
+      	});
+      	document.getElementById('image_carousel_send').addEventListener('click', function () {
+              liff.sendMessages([{
+                    type: "template",
+                    altText: document.getElementById('image_carousel_altText').value,
+                    template: {
+                           type: "image_carousel",
+                           columns: [{
+                               imageUrl: document.getElementById('image_carousel_imageUrl1').value,
+                               action: {
+                                   type: "uri",
+                                   label: document.getElementById('image_carousel_label1').value,
+                                   uri: document.getElementById('image_carousel_url1').value}},
+                                       {
+                               imageUrl: document.getElementById('image_carousel_imageUrl2').value,
+                               action: {
+                                   type: "uri",
+                                   label: document.getElementById('image_carousel_label2').value,
+                                   uri: document.getElementById('image_carousel_url2').value}},
+      								 {
+                               imageUrl: document.getElementById('image_carousel_imageUrl3').value,
+                               action: {
+                                   type: "uri",
+                                   label: document.getElementById('image_carousel_label2').value,
+                                   uri: document.getElementById('image_carousel_url3').value}}
+                                        ]
+                                      }
+              }]).then(function () {
+                  liff.closeWindow();
+      		});
+      	});
+      	</script>
+      <div style='text-align: right;position: fixed;z-index:9999999;bottom: 0; width: 100%;cursor: pointer;line-height: 0;display:block !important;'><a title="Hosted on free web hosting 000webhost.com. Host your own website for FREE." target="_blank" href="https://www.000webhost.com/?utm_source=000webhostapp&amp;utm_campaign=000_logo&amp;utm_medium=website&amp;utm_content=footer_img"><img src="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"  alt="www.000webhost.com"></a></div></body>
+        <h2 style="color: #3f3f3f;">Designed by <a style="color: #3f3f3f; text-decoration: none; font-size: 20px;">Ayana.</a></h2>
+    </center>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script src="liff-starter.js"></script>
 </body>
