--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <style type="text/css">
     body {
-	background-image: url(pexels-photo-164005.jpeg);
+	background-image: pexels-photo-164005.jpeg;
 }
 img[alt="www.000webhost.com"] { display: none;}
     </style>
