--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
     <title>TCB - LIFF</title>
     <link rel="stylesheet" href="style.css">
     <style type="text/css">
-    body {
-	background-image = "pexels-photo-164005.jpeg";
-}
+    <body background="pexels-photo-164005.jpeg">
 img[alt="www.000webhost.com"] { display: none;}
     </style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
