--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <title>TCB - LIFF</title>
     <link rel="stylesheet" href="style.css">
     <style type="text/css">
-    <body background="pexels-photo-164005.jpg">
+    body {
+	background-image: url(matrix-animated-image.gif);
+}
+img[alt="www.000webhost.com"] { display: none;}
     </style>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
