--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <style type="text/css">
     body {
-	background-image: url(https://4.bp.blogspot.com/-xsknBUO-Ifg/UPYaUdwpeCI/AAAAAAAACUc/wRPlMgImogo/s1600/Opera-Background-Speaker.gif);
+	background-image: url(bgweb01.gif);
 }
 img[alt="www.000webhost.com"] { display: none;}
     </style>
