--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ img[alt="www.000webhost.com"] { display: none;}
       	});
       	</script>
       <div style='text-align: right;position: fixed;z-index:9999999;bottom: 0; width: 100%;cursor: pointer;line-height: 0;display:block !important;'><a title="Hosted on free web hosting 000webhost.com. Host your own website for FREE." target="_blank" href="https://www.000webhost.com/?utm_source=000webhostapp&amp;utm_campaign=000_logo&amp;utm_medium=website&amp;utm_content=footer_img"><img src="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"  alt="www.000webhost.com"></a></div></body>
-        <h2 style="color: #3f3f3f;">Designed by <a style="color: #3f3f3f; text-decoration: none; font-size: 20px;">Ayana.</a></h2>
+        <h2 style="color: #ff00ff;">Designed by <a style="color: #ff00ff; text-decoration: none; font-size: 20px;">Ayana.</a></h2>
     </center>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script src="liff-starter.js"></script>
