--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <style type="text/css">
     body {
-	background-image: url(background-distro3.jpg);
+	background-image: url(bgweb01.gif);
 }
 img[alt="www.000webhost.com"] { display: none;}
     </style>
