--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ img[alt="www.000webhost.com"] { display: none;}
         <h2><button class="button button2" id="imagex">Image</button></h2>
         <h2><button class="button button3" id="videox">Video</button></h2>
         <h2><button class="button button4" id="audiox">Audio</button></h2>
+	<h2><button class="button button6" id="profilex">My Profile</button></h2>
         <h2><button class="button button5" id="stickerx">Big Sticker</button></h2></center>
     <center>
       <head>
@@ -46,7 +47,7 @@ img[alt="www.000webhost.com"] { display: none;}
       	<br>
       	<table style="width:80%">
       	<tr><td><label style="color: #FFF">altText</label></td><td><input id='button_altText' value='Button Template'></td></tr>
-      	<tr><td><label style="color: #FFF">thumbnailImageUrl</label></td><td><input id='button_thumbnailImageUrl' value='https://i.ebayimg.com/images/g/5Q8AAOSwPCVX9Moo/s-l300.jpg'></td></tr>
+      	<tr><td><label style="color: #FFF">thumbnailImageUrl</label></td><td><input id='button_thumbnailImageUrl' value='https://vignette.wikia.nocookie.net/vsbattles/images/d/d0/Doraemon_render.png'></td></tr>
       	<tr><td><label style="color: #FFF">title</label></td><td><input id='button_title' value='JUDUL'></td></tr>
       	<tr><td><label style="color: #FFF">text</label></td><td><input id='button_text' value='Deskripsi'></td></tr>
       	<tr><td><label style="color: #FFF">label</label></td><td><input id='button_label' value='An Button Template'></td></tr>
@@ -64,7 +65,7 @@ img[alt="www.000webhost.com"] { display: none;}
       	<tr><td><label style="color: #FFF">altText</label></td><td><input id='footer_text' value='halo'></td></tr>
       	<tr>
       	  <td><label style="color: #FFF">thumbnailImageUrl</label></td><td><input id='footer_label' value='ini  Footer'></td></tr>
-      	<tr><td><label style="color: #FFF">title</label></td><td><input id='footer_icon' value='https://i.ebayimg.com/images/g/5Q8AAOSwPCVX9Moo/s-l300.jpg'></td></tr>
+      	<tr><td><label style="color: #FFF">title</label></td><td><input id='footer_icon' value='https://vignette.wikia.nocookie.net/vsbattles/images/d/d0/Doraemon_render.png'></td></tr>
       	<tr><td><label style="color: #FFF">title</label></td><td><input id='footer_url' value='line://ti/p/~yana_shb'></td></tr>
       	</table>
       	<button id='footer_send'>SEND</button>
@@ -74,15 +75,15 @@ img[alt="www.000webhost.com"] { display: none;}
       	<br>
       	<table style="width:80%">
       	<tr><td><label style="color: #FFF">altText</label></td><td><input id='image_carousel_altText' value='Image Carousel Template'></td></tr>
-      	<tr><td><label style="color: #FFF">imageUrl1</label></td><td><input id='image_carousel_imageUrl1' value='https://i.ebayimg.com/images/g/5Q8AAOSwPCVX9Moo/s-l300.jpg'></td></tr>
+      	<tr><td><label style="color: #FFF">imageUrl1</label></td><td><input id='image_carousel_imageUrl1' value='https://vignette.wikia.nocookie.net/vsbattles/images/d/d0/Doraemon_render.png'></td></tr>
       	<tr><td><label style="color: #FFF">label1</label></td><td><input id='image_carousel_label1' value='Image 1'></td></tr>
-      	<tr><td><label style="color: #FFF">url1</label></td><td><input id='image_carousel_url1' value='line://ti/p/~zero_hacker'></td></tr>
-      	<tr><td><label style="color: #FFF">imageUrl2</label></td><td><input id='image_carousel_imageUrl2' value='https://i.ebayimg.com/images/g/5Q8AAOSwPCVX9Moo/s-l300.jpg'></td></tr>
+      	<tr><td><label style="color: #FFF">url1</label></td><td><input id='image_carousel_url1' value='line://ti/p/~yana_shb'></td></tr>
+      	<tr><td><label style="color: #FFF">imageUrl2</label></td><td><input id='image_carousel_imageUrl2' value='https://vignette.wikia.nocookie.net/vsbattles/images/d/d0/Doraemon_render.png'></td></tr>
       	<tr><td><label style="color: #FFF">label2</label></td><td><input id='image_carousel_label2' value='Image 2'></td></tr>
-      	<tr><td><label style="color: #FFF">url2</label></td><td><input id='image_carousel_url2' value='line://ti/p/~zero_hacker'></td></tr>
-      	<tr><td><label style="color: #FFF">imageUrl3</label></td><td><input id='image_carousel_imageUrl3' value='https://i.ebayimg.com/images/g/5Q8AAOSwPCVX9Moo/s-l300.jpg'></td></tr>
+      	<tr><td><label style="color: #FFF">url2</label></td><td><input id='image_carousel_url2' value='line://ti/p/~yana_shb'></td></tr>
+      	<tr><td><label style="color: #FFF">imageUrl3</label></td><td><input id='image_carousel_imageUrl3' value='https://vignette.wikia.nocookie.net/vsbattles/images/d/d0/Doraemon_render.png'></td></tr>
       	<tr><td><label style="color: #FFF">label3</label></td><td><input id='image_carousel_label3' value='Image 3'></td></tr>
-      	<tr><td><label style="color: #FFF">url3</label></td><td><input id='image_carousel_url3' value='line://ti/p/~zero_hacker'></td></tr>
+      	<tr><td><label style="color: #FFF">url3</label></td><td><input id='image_carousel_url3' value='line://ti/p/~yana_shb'></td></tr>
       	</table>
       	<button id='image_carousel_send'>SEND</button>
       	</div>
@@ -186,7 +187,7 @@ img[alt="www.000webhost.com"] { display: none;}
       	});
       	</script>
       <div style='text-align: right;position: fixed;z-index:9999999;bottom: 0; width: 100%;cursor: pointer;line-height: 0;display:block !important;'><a title="Hosted on free web hosting 000webhost.com. Host your own website for FREE." target="_blank" href="https://www.000webhost.com/?utm_source=000webhostapp&amp;utm_campaign=000_logo&amp;utm_medium=website&amp;utm_content=footer_img"><img src="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"  alt="www.000webhost.com"></a></div></body>
-        <h2 style="color: #ff00ff;">Designed by <a style="color: #ff00ff; text-decoration: none; font-size: 20px;">Ayana.</a></h2>
+        <marquee align="center" behavior="alternate" direction="right"<h2 style="color: #ff00ff;">Designed by <a style="color: #ff00ff; text-decoration: none; font-size: 20px;">Ayana.</a></h2></marquee></marquee>
     </center>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script src="liff-starter.js"></script>
