--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ img[alt="www.000webhost.com"] { display: none;}
         <h2><button class="button button2" id="imagex">Image</button></h2>
         <h2><button class="button button3" id="videox">Video</button></h2>
         <h2><button class="button button4" id="audiox">Audio</button></h2>
-	<h2><button class="button button6" id="profilex">My Profile</button></h2>
-        <h2><button class="button button5" id="stickerx">Big Sticker</button></h2></center>
+	<h2><button class="button button5" id="stickerx">Big Sticker</button>
+	<h2><button class="button button6" id="profilex">My Profile</button></h2></center>
     <center>
       <head>
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
