--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ img[alt="www.000webhost.com"] { display: none;}
           <a href="line://ti/p/~yana_shb" class="bttn">TEAM CRACKBOT</a>
         </div></center>
     <center>
-        <h2><button class="button button1" id="textx">Text</button></h2>
+        <strong><h2><button class="button button1" id="textx">Text</button></h2></strong>
         <h2><button class="button button2" id="imagex">Image</button></h2>
         <h2><button class="button button3" id="videox">Video</button></h2>
         <h2><button class="button button4" id="audiox">Audio</button></h2>
