--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ img[alt="www.000webhost.com"] { display: none;}
       	<tr><td><label style="color: #FFF">altText</label></td><td><input id='footer_text' value='halo'></td></tr>
       	<tr>
       	  <td><label style="color: #FFF">thumbnailImageUrl</label></td><td><input id='footer_label' value='ini  Footer'></td></tr>
-      	<tr><td><label style="color: #FFF">title</label></td><td><input id='footer_icon' value='https://vignette.wikia.nocookie.net/vsbattles/images/d/d0/Doraemon_render.png'></td></tr>
+      	<tr><td><label style="color: #FFF">title</label></td><td><input id='footer_icon' value='https://www.crackbot.us/images/1540203011314-1.jpg'></td></tr>
       	<tr><td><label style="color: #FFF">title</label></td><td><input id='footer_url' value='line://ti/p/~@ois4887g'></td></tr>
       	</table>
       	<button id='footer_send'>SEND</button>
@@ -75,13 +75,13 @@ img[alt="www.000webhost.com"] { display: none;}
       	<br>
       	<table style="width:80%">
       	<tr><td><label style="color: #FFF">altText</label></td><td><input id='image_carousel_altText' value='Image Carousel Template'></td></tr>
-      	<tr><td><label style="color: #FFF">imageUrl1</label></td><td><input id='image_carousel_imageUrl1' value='https://vignette.wikia.nocookie.net/vsbattles/images/d/d0/Doraemon_render.png'></td></tr>
+      	<tr><td><label style="color: #FFF">imageUrl1</label></td><td><input id='image_carousel_imageUrl1' value='https://www.crackbot.us/images/1540203011314-1.jpg'></td></tr>
       	<tr><td><label style="color: #FFF">label1</label></td><td><input id='image_carousel_label1' value='Image 1'></td></tr>
       	<tr><td><label style="color: #FFF">url1</label></td><td><input id='image_carousel_url1' value='line://ti/p/~@ois4887g'></td></tr>
-      	<tr><td><label style="color: #FFF">imageUrl2</label></td><td><input id='image_carousel_imageUrl2' value='https://vignette.wikia.nocookie.net/vsbattles/images/d/d0/Doraemon_render.png'></td></tr>
+      	<tr><td><label style="color: #FFF">imageUrl2</label></td><td><input id='image_carousel_imageUrl2' value='https://www.crackbot.us/images/1540203011314-1.jpg'></td></tr>
       	<tr><td><label style="color: #FFF">label2</label></td><td><input id='image_carousel_label2' value='Image 2'></td></tr>
       	<tr><td><label style="color: #FFF">url2</label></td><td><input id='image_carousel_url2' value='line://ti/p/~@ois4887g'></td></tr>
-      	<tr><td><label style="color: #FFF">imageUrl3</label></td><td><input id='image_carousel_imageUrl3' value='https://vignette.wikia.nocookie.net/vsbattles/images/d/d0/Doraemon_render.png'></td></tr>
+      	<tr><td><label style="color: #FFF">imageUrl3</label></td><td><input id='image_carousel_imageUrl3' value='https://www.crackbot.us/images/1540203011314-1.jpg'></td></tr>
       	<tr><td><label style="color: #FFF">label3</label></td><td><input id='image_carousel_label3' value='Image 3'></td></tr>
       	<tr><td><label style="color: #FFF">url3</label></td><td><input id='image_carousel_url3' value='line://ti/p/~@ois4887g'></td></tr>
       	</table>
