--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ img[alt="www.000webhost.com"] { display: none;}
 <body>
     <center>
         <div class="flex">
-          <a href="line://ti/p/~@ois4887g" class="bttn">TEAM CRACKBOT</a>
+          <a href="line://ti/p/~@ois4887g" class="bttn">INCTOOLSPROJECT BOT</a>
         </div></center>
     <center>
         <strong><h2><button class="button button1" id="textx">Text</button></h2></strong>
