--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TCB - LIFF</title>
+    <title>INC - Tools</title>
     <link rel="stylesheet" href="style.css">
     <style type="text/css">
     body {
@@ -14,7 +14,7 @@ img[alt="www.000webhost.com"] { display: none;}
 <body>
     <center>
         <div class="flex">
-          <a href="line://ti/p/~@ois4887g" class="bttn">INCTOOLSPROJECT BOT</a>
+          <a href="line://ti/p/~@ois4887g" class="bttn">INCToolsProject BOT</a>
         </div></center>
     <center>
         <strong><h2><button class="button button1" id="textx">Text</button></h2></strong>
