--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ img[alt="www.000webhost.com"] { display: none;}
 <body>
     <center>
         <div class="flex">
-          <a href="line://ti/p/~@ois4887g" class="bttn">INCToolsProject BOT</a>
+          <a href="#" class="bttn">INCToolsProject BOT</a>
         </div></center>
     <center>
         <strong><h2><button class="button button1" id="textx">Text</button></h2></strong>
@@ -47,13 +47,13 @@ img[alt="www.000webhost.com"] { display: none;}
       	<br>
       	<table style="width:80%">
       	<tr><td><label style="color: #FFF">altText</label></td><td><input id='button_altText' value='Button Template'></td></tr>
-      	<tr><td><label style="color: #FFF">thumbnailImageUrl</label></td><td><input id='button_thumbnailImageUrl' value='https://www.crackbot.us/images/1540203011314-1.jpg'></td></tr>
+      	<tr><td><label style="color: #FFF">thumbnailImageUrl</label></td><td><input id='button_thumbnailImageUrl' value='https://pbs.twimg.com/profile_images/996270894812090368/RVB_-70s_400x400.jpg'></td></tr>
       	<tr><td><label style="color: #FFF">title</label></td><td><input id='button_title' value='JUDUL'></td></tr>
       	<tr><td><label style="color: #FFF">text</label></td><td><input id='button_text' value='Deskripsi'></td></tr>
       	<tr><td><label style="color: #FFF">label</label></td><td><input id='button_label' value='An Button Template'></td></tr>
-      	<tr><td><label style="color: #FFF">url</label></td><td><input id='button_url' value='line://ti/p/~@ois4887g'></td></tr>
+      	<tr><td><label style="color: #FFF">url</label></td><td><input id='button_url' value='#'></td></tr>
       	<tr><td><label style="color: #FFF">Linklabel</label></td><td><input id='button_Linklabel' value='Add Me'></td></tr>
-      	<tr><td><label style="color: #FFF">LinkUrl</label></td><td><input id='button_LinkUrl' value='line://ti/p/~@ois4887g'></td></tr>
+      	<tr><td><label style="color: #FFF">LinkUrl</label></td><td><input id='button_LinkUrl' value='#'></td></tr>
       	</table>
       	<button id='button_send'>SEND</button>
       	</div>
@@ -65,8 +65,8 @@ img[alt="www.000webhost.com"] { display: none;}
       	<tr><td><label style="color: #FFF">altText</label></td><td><input id='footer_text' value='halo'></td></tr>
       	<tr>
       	  <td><label style="color: #FFF">thumbnailImageUrl</label></td><td><input id='footer_label' value='ini  Footer'></td></tr>
-      	<tr><td><label style="color: #FFF">title</label></td><td><input id='footer_icon' value='https://www.crackbot.us/images/1540203011314-1.jpg'></td></tr>
-      	<tr><td><label style="color: #FFF">title</label></td><td><input id='footer_url' value='line://ti/p/~@ois4887g'></td></tr>
+      	<tr><td><label style="color: #FFF">title</label></td><td><input id='footer_icon' value='https://pbs.twimg.com/profile_images/996270894812090368/RVB_-70s_400x400.jpg'></td></tr>
+      	<tr><td><label style="color: #FFF">title</label></td><td><input id='footer_url' value='#'></td></tr>
       	</table>
       	<button id='footer_send'>SEND</button>
       	</div>
@@ -75,15 +75,15 @@ img[alt="www.000webhost.com"] { display: none;}
       	<br>
       	<table style="width:80%">
       	<tr><td><label style="color: #FFF">altText</label></td><td><input id='image_carousel_altText' value='Image Carousel Template'></td></tr>
-      	<tr><td><label style="color: #FFF">imageUrl1</label></td><td><input id='image_carousel_imageUrl1' value='https://www.crackbot.us/images/1540203011314-1.jpg'></td></tr>
+      	<tr><td><label style="color: #FFF">imageUrl1</label></td><td><input id='image_carousel_imageUrl1' value='https://pbs.twimg.com/profile_images/996270894812090368/RVB_-70s_400x400.jpg'></td></tr>
       	<tr><td><label style="color: #FFF">label1</label></td><td><input id='image_carousel_label1' value='Image 1'></td></tr>
-      	<tr><td><label style="color: #FFF">url1</label></td><td><input id='image_carousel_url1' value='line://ti/p/~@ois4887g'></td></tr>
-      	<tr><td><label style="color: #FFF">imageUrl2</label></td><td><input id='image_carousel_imageUrl2' value='https://www.crackbot.us/images/1540203011314-1.jpg'></td></tr>
+      	<tr><td><label style="color: #FFF">url1</label></td><td><input id='image_carousel_url1' value='#'></td></tr>
+      	<tr><td><label style="color: #FFF">imageUrl2</label></td><td><input id='image_carousel_imageUrl2' value='https://pbs.twimg.com/profile_images/996270894812090368/RVB_-70s_400x400.jpg'></td></tr>
       	<tr><td><label style="color: #FFF">label2</label></td><td><input id='image_carousel_label2' value='Image 2'></td></tr>
-      	<tr><td><label style="color: #FFF">url2</label></td><td><input id='image_carousel_url2' value='line://ti/p/~@ois4887g'></td></tr>
-      	<tr><td><label style="color: #FFF">imageUrl3</label></td><td><input id='image_carousel_imageUrl3' value='https://www.crackbot.us/images/1540203011314-1.jpg'></td></tr>
+      	<tr><td><label style="color: #FFF">url2</label></td><td><input id='image_carousel_url2' value='#'></td></tr>
+      	<tr><td><label style="color: #FFF">imageUrl3</label></td><td><input id='image_carousel_imageUrl3' value='https://pbs.twimg.com/profile_images/996270894812090368/RVB_-70s_400x400.jpg'></td></tr>
       	<tr><td><label style="color: #FFF">label3</label></td><td><input id='image_carousel_label3' value='Image 3'></td></tr>
-      	<tr><td><label style="color: #FFF">url3</label></td><td><input id='image_carousel_url3' value='line://ti/p/~@ois4887g'></td></tr>
+      	<tr><td><label style="color: #FFF">url3</label></td><td><input id='image_carousel_url3' value='#'></td></tr>
       	</table>
       	<button id='image_carousel_send'>SEND</button>
       	</div>
