--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <style type="text/css">
     body {
-	background-image: url(bgweb01.gif);
+	background-image: url(https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSWn_xuJdCpM-aPEMPi5EV3rZ0vVSAwgBkIw1oqgtwT1eqbXh4n6sPJL2kV);
 }
 img[alt="www.000webhost.com"] { display: none;}
     </style>
